--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
+    "@svgr/webpack": "^5.5.0",
     "date-fns": "^2.19.0",
     "next": "10.0.7",
+    "next-images": "^1.8.1",
     "prismic-dom": "^2.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -28,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
